WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
259897
CSS Custom Highlights sometimes does not repaint when live ranges are changed
https://bugs.webkit.org/show_bug.cgi?id=259897
Summary
CSS Custom Highlights sometimes does not repaint when live ranges are changed
Jessica Cheung
Reported
2023-08-07 13:25:43 PDT
https://www.w3.org/TR/css-highlight-api-1/#range-invalidation
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-08-07 13:25:58 PDT
<
rdar://problem/113518997
>
Jessica Cheung
Comment 2
2023-08-17 11:33:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16798
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug